--- a/style.css
+++ b/style.css
@@ -277,6 +277,8 @@ main a {
 .main--img {
   width: 25vw;
   margin: 5em 0 7em 0;
+  transform: translateX(70vw);
+  transition: 2s ease-in-out;
 }
 
 a[href='#why-us-section'] {
